// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-1 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-0 {
  fill: #fff;
  vertical-align: middle;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-2 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

.emotion-4 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<div
    class="sui-box emotion-16"
  >
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 1
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 2
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-1 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-0 {
  fill: #fff;
  vertical-align: middle;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-2 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

.emotion-4 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-7 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

.emotion-6 {
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="sui-box emotion-15"
  >
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 1
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-7"
      >
        <div
          class="sui-box emotion-6"
        />
      </div>
      <div
        class="emotion-2"
      >
        Step 2
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    />
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-7"
      >
        <div
          class="sui-box emotion-6"
        />
      </div>
      <div
        class="emotion-2"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-1 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-0 {
  fill: #fff;
  vertical-align: middle;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-2 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

.emotion-10 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-13 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

.emotion-12 {
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

.emotion-4 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<div
    class="sui-box emotion-17"
  >
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 1
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 2
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-10"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-13"
      >
        <div
          class="sui-box emotion-12"
        />
      </div>
      <div
        class="emotion-2"
      >
        Step 3
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-1 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-2 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

.emotion-10 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.emotion-13 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

.emotion-4 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

.emotion-0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #fff;
  font-weight: 500;
}

.emotion-12 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-weight: 500;
}

<div
    class="sui-box emotion-16"
  >
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <div
          class="sui-box emotion-0"
        >
          1
        </div>
      </div>
      <div
        class="emotion-2"
      >
        Step 1
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <div
          class="sui-box emotion-0"
        >
          2
        </div>
      </div>
      <div
        class="emotion-2"
      >
        Step 2
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-10"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-13"
      >
        <div
          class="sui-box emotion-12"
          style="color: rgb(220, 225, 235);"
        >
          3
        </div>
      </div>
      <div
        class="emotion-2"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-1 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #45d6b5;
}

.emotion-0 {
  fill: #fff;
  vertical-align: middle;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-2 {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.emotion-5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

.emotion-13 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

.emotion-12 {
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

.emotion-4 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

.emotion-10 {
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
}

<div
    class="sui-box emotion-16"
  >
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 1
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-4"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-1"
      >
        <svg
          class="sui-box sc-ui-icon emotion-0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="emotion-2"
      >
        Step 2
      </div>
    </div>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="emotion-10"
      />
    </div>
    <div
      class="sui-box emotion-3"
    >
      <div
        class="sui-box emotion-13"
      >
        <div
          class="sui-box emotion-12"
        />
      </div>
      <div
        class="emotion-2"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
